--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -51,6 +51,15 @@
     }
 }
 
+.line-clamp {
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    /* Number of lines you want to display */
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
 
 .slider {
     height: 100px;
