Background and styling adjustments. Not positive if they are great.

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -87,7 +87,7 @@
 
 html.dark {
     --scrollbar-track-bg: #121212;
-    --scrollbar-thumb: #f2f2f2;
+    --scrollbar-thumb: #dbdbdb;
 }
 
 /* width */
