Revert "Performance optimizations"
This reverts commit d5feff114ef41284bcadccd4ffee263ea89ad503.

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Alegreya:wght@100;200;300;400;500;700;800&family=Source+Sans+3:wght@100;200;300;400;500;600;800&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
